--- a/exam-front/src/app/app.component.html
+++ b/exam-front/src/app/app.component.html
@@ -1,18 +1,3 @@
-<!-- <div class="bootstrap-wrapper">
-<div class="container">
-    <h1>Welcome to TestYourself</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <h1>LEFT SIDE</h1>
-        <button mat-raised-button color="accent">Wow</button>
-      </div>
-      <div class="col-md-6">
-        <h1>RIGHT SIDE</h1>
-        <button mat-raised-button color="primary">Wow</button>
-      </div>
-
-    </div>
-</div>
-</div> -->
-
+<!-- navbar static -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
